force-app/main/default/objects/TECH_ChangeUser__c/TECH_ChangeUser__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the customer document of the account and the username of the future owner of the records. After the LWC to change user owner has been executed the records in this object will be deleted in order to no store bag dada.</description>
    <label>TECH_ChangeUser</label>
    <nameField>
        <label>Nombre de TECH_ChangeUser</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TECH_ChangeUser</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>