force-app/main/default/objects/TECH_ChangeUser__c/fields/TECH_ContentDocument__c.field-meta.xml
<CustomField>
    <fullName>TECH_ContentDocument__c</fullName>
    <label>Content document</label>
    <length>20</length>
    <type>Text</type>
</CustomField>