force-app/main/default/objects/TECH_ChangeUser__c/fields/TECH_NewUser__c.field-meta.xml
<CustomField>
    <fullName>TECH_NewUser__c</fullName>
    <description>This field store the username of the records. In order to update the owner with the user related.</description>
    <label>New user name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>