force-app/main/default/objects/TECH_ChangeUser__c/fields/TECH_NombreCuenta__c.field-meta.xml
<CustomField>
    <fullName>TECH_NombreCuenta__c</fullName>
    <label>Nombre cuenta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>