force-app/main/default/objects/TECH_ChangeUser__c/fields/Tech_User__c.field-meta.xml
<CustomField>
    <fullName>Tech_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TECH_ChangeUser</relationshipName>
    <type>Lookup</type>
</CustomField>